2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): filter
	out CapsLock modifiers since it's otherwise possible to set the
	same accel for several actions (fixes #350424)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): blacklist
	numbers, space, and tab as accels (fixes #359092)

2007-01-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (main): remove left-over call to
	gnome_theme_init(). The rest of the code dealing with (key) themes
	has been removed back in 2004... (fixes #157452)

2007-01-30  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): issue a
	sensible error message when trying to use unmodified keybindings
	(fixes #328152)

2007-01-21  Thomas Wood  <thos@gnome.org>

	* keybinding.desktop.in.in: Corrected category entry

2007-01-10  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #394824

	Patch by Jens Granseuer <jensgr@gmx.net>

	* gnome-keybinding-properties.c (key_entry_controlling_key_changed,
	setup_dialog, main): fixed leaks.

2007-01-08  Rodrigo Moya <rodrigo@novell.com>

	* gnome-keybinding-properties.c (create_dialog, clear_old_model):
	moved gtk_scrolled_window_ call back to its correct place.

2007-01-08  Rodrigo Moya <rodrigo@novell.com>

	Fixes #128158
	
	Patch by Jens Granseuer <jensgr@gmx.net>

	* gnome-keybinding-properties.c (create_dialog): set scrolled window
	policy to _NEVER.
	(clear_old_model): euse the existing model instead of discarding and
	rebuilding it.
	(main): don't leak the GnomeProgram.
	
2006-07-27  Gary Coady <gary@lyranthe.org>

	Fixes #333576

	* gnome-keybinding-properties.c (accel_edited_callback): don't assume
	defines are contiguous.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* keybinding.desktop.in.in: don't list the Application category, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)
