@@ -1,3 +1,13 @@
+2007-02-04  Jens Granseuer  <jensgr@gmx.net>
+
+	* eggaccelerators.c: (egg_virtual_accelerator_name),
+	(egg_virtual_accelerator_label):
+	* eggaccelerators.h:
+	* eggcellrendererkeys.c: (convert_keysym_state_to_string):
+	* gnome-keybinding-properties.c: (binding_name),
+	(accel_edited_callback): support localized key names (interim fix
+	for #145346)
+
 2007-02-03  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keybinding-properties.c: (accel_edited_callback): filter
